tests/invalid/set_magic_rand_wrong_arg_count/main.py
def run_case() -> None:
    s: set[int] = {1, 2}
    s.__rand__()


if __name__ == "__main__":
    run_case()
